OtherRegionsTable::_num_occupied not updated correctly

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 15
    • Affects Version/s: 14
    • Component/s: hotspot
    • gc
    • b14

        We do a double prt->add_reference() in OtherRegionTable::add_reference() which leads to never increasing num_added_by_coarsening.

        bool added = prt->add_reference(from);
        if (prt->add_reference(from)) {
          num_added_by_coarsening++;
        }

        Simple fix is to just remove the first add_reference().

              Assignee:
              Ivan Walulya
              Reporter:
              Stefan Johansson
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: