8240589: OtherRegionsTable::_num_occupied not updated correctly

Reviewed-by: tschatzl, sjohanss